# ai-green-corridor-sys

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py  versions
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: ambulance.py  hospital.py  traffic.py  users.py
backend/app/core/: celery_app.py  config.py
backend/app/db/: init_db.sql  session.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: schemas.py
backend/app/services/: minio_client.py  video_detection.py
backend/app/tasks/: tasks.py
backend/db/: init_db.sql
docs/: Instructions.md  demo.html
frontend/: .dockerignore  Dockerfile  angular.json  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  main.ts  polyfills.ts
frontend/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
frontend/src/app/ambulance/: ambulance.component.ts
frontend/src/app/components/ambulance/: ambulance-dashboard.component.css  ambulance-dashboard.component.html  (+1 more)
frontend/src/app/hospital/: hospital.component.ts
frontend/src/app/services/: api.service.ts
frontend/src/app/traffic/: traffic.component.ts
frontend/src/app/user/: user.component.ts
infra/: docker-compose.yml
infra/minio/: init-buckets.sh
infra/nginx/: nginx.conf
infra/postgres/: init.sql
infra/rabbitmq/: definitions.json
scripts/: create_queues.sh  wait-for-it.sh
services/celery-worker/: Dockerfile
services/yolov5/: Dockerfile  dummy_detector.py
(+9 files in other folders)
